So mad, I started doing test driven development